# bandits

./: .gitignore  README.md  bandits.cabal  stack.yaml
src/: main.hs
src/Bandits/: Api.hs  Experiment.hs  Types.hs
src/Bandits/Backend/: HRR.hs
src/Bandits/Experiment/: Instructions.hs  Intermidiate.hs  MultiarmedBandit.hs  Types.hs
