name:                bandits
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/bandits#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bandits.Api
                       Bandits.Backend.HRR
                       Bandits.Types
                       Bandits.Experiment.Instructions
                       Bandits.Experiment.Intermidiate
                       Bandits.Experiment.MultiarmedBandit
                       Bandits.Experiment.Types  
  build-depends:       HDBC
                     , aeson
                     , base >= 4.7 && < 5
                     , containers
                     , convertible
                     , cryptonite
                     , deepseq
                     , free
                     , hashable
                     , memory
                     , names-th
                     , persistable-record
                     , relational-query
                     , relational-query-HDBC
                     , servant
                     , stm
                     , text
                     , time
                     , vector
  default-language:    Haskell2010

executable bandits
  hs-source-dirs:      src
  main-is:             main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       bandits
                     , base
  default-language:    Haskell2010

test-suite bandits-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bandits
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bandits
